@@ -1,6 +1,8 @@
 package com.herobot;
 import java.io.*;
-import java.net.*;
+import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URL;
 import java.util.Scanner;
 
 public class TerminalBot {
@@ -17,7 +19,7 @@ public class TerminalBot {
     }
     public static void askOllama(String prompt) {
         try {
-            URL url = new URL("http://localhost:11434/api/generate");
+            URL url = URI.create("http://localhost:11434/api/generate").toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("POST");
             conn.setDoOutput(true);
